--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@babel/preset-react": "^7.14.5",
     "babel-loader": "^8.2.3",
     "html-webpack-plugin": "^5.4.0",
+    "jest": "^27.3.1",
+    "regenerator-runtime": "^0.13.9",
     "webpack": "^5.59.1",
     "webpack-cli": "^4.9.1",
     "webpack-node-externals": "^3.0.0"
